nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "colorteller.appmesh-demo"
  name: appmesh-ingress-nginx
  namespace: appmesh-demo
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: colorteller
              servicePort: 9080
